changed the path to the picture

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -101,7 +101,7 @@
                 <li class="card__item">
                   <a href="#" class="card__link">
                     <div class="card__pic">
-                      <img src="./assets/images/common/stores/1-4.png" alt="" class="card__img">
+                      <img src="assets/images/common/stores/1-4.png" alt="" class="card__img">
                     </div>
                     <div class="card__content">
                       <div class="card__title">Макдоналдс — Газетный</div>
@@ -117,7 +117,7 @@
                 <li class="card__item">
                   <a href="#" class="card__link">
                     <div class="card__pic">
-                      <img src="./assets/images/common/stores/1-5.png" alt="" class="card__img">
+                      <img src="assets/images/common/stores/1-5.png" alt="" class="card__img">
                     </div>
                     <div class="card__content">
                       <div class="card__title">DimSum & Co — ЦДМ</div>
